--- a/package.json
+++ b/package.json
@@ -46,6 +46,10 @@
       "last 1 safari version"
     ]
   },
+  "engines": {
+    "node": "16.14.2",
+    "npm": "6.14.10"
+  },
   "devDependencies": {
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "tailwindcss": "^3.3.2"
