--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-material-ui-form-validator": "^3.0.1",
     "react-router-dom": "^6.12.1",
     "react-scripts": "^5.0.1",
+    "serve": "^14.2.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -45,10 +46,6 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "engines": {
-    "node": "16.14.2",
-    "npm": "6.14.10"
   },
   "devDependencies": {
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
